# cloud-reviews-agent

./: .env.example  .gitignore  135.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: app.py  chains.py  clients.py  graph.py  ingest.py  models.py  prompts.py  retrieval.py  scrape_reviews.py  token_tracker.py  tools.py
data/prompts/: agent_system.txt  aspects_analysis.txt  jtbd_analysis.txt  rag_system.txt  sentiment_analysis.txt  tool_selection_system.txt
data/reviews/: cherry_servers.csv  digital_ocean.csv  hetzner.csv  ovh.csv  scaleway.csv  vultr.csv
