[project]
name = "mlevin-ae-3-5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apify-client>=2.3.0",
    "bs4>=0.0.2",
    "chromadb>=1.3.0",
    "langchain>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.2",
    "langchain-openai>=1.0.1",
    "langgraph>=0.3.27",
    "langgraph-checkpoint>=2.0.23",
    "langgraph-checkpoint-sqlite>=2.0.20",
    "nltk>=3.9.2",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "streamlit>=1.51.0",
]
